--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
       <h4>Who is lying?</h4>
     </section>
 
-    <section class="check">
+    <!-- <section class="check">
       <h3 class="right-wrong">Correct!</h3>
       <h4 class="explain">The maid was lying. There are no corners in a circular house.</h4>
     </section>
-  </main>
+  </main> -->
 
 
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
