--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 <body>
 
   <header>
-    <h3>Detective Riddles</h3>
-    <span class="score"><strong>Score</strong> <span>01</span></span></h3>
+    <h2>
+      <span class="reset">Reset</span>
+      Detective Riddles
+      <span class="score"><strong>Score</strong> <span>01</span></span>
+    </h2>
+
   </header>
 
   <main class="container">
@@ -52,6 +56,8 @@
       <h4 class="explain">The maid was lying. There are no corners in a circular house.</h4>
     </section>
   </main> -->
+
+
 
 
 
