finish fetch Json, working on game logic

--- a/index.html
+++ b/index.html
@@ -11,53 +11,41 @@
 </head>
 
 <body>
+  <!------------------------------- Overlay -------------------------->
   <div class="overlay">
     <header>
       <h1>Detective Riddles</h1>
       <h6>Improve you logical skill</h6>
     </header>
+
     <p>Click anywhere to play</p>
-    <!-- <div id="canvas"></div> -->
   </div>
+  <!------------------------------- End overlay -------------------------->
+
+  <!------------------------------- Gameplay header-------------------------->
   <header>
     <h2>
       <span class="reset">Reset</span>
       Detective Riddles
       <span class="score"><span>Score</span> <span>01</span></span>
     </h2>
-
   </header>
+  <!---------------------------End Gameplay header-------------------------->
 
+  <!------------------------------- Gameplay Body -------------------------->
   <main class="container">
 
     <section class="ques-container">
-      <h4>The Smith family is a very wealthy family that lives in a big, circular home. One morning,
-        Mr. Smith woke up and saw a strawberry jam stain on his new carpet. He figured out that everyone who was there
-        that morning had a jam sandwich.</h4>
+      <h4></h4>
     </section>
 
     <section class="ans-container">
-      <article class="ans">
-        <!-- <img src=""> -->
-        <h5>Billy Smith: “I was outside playing basketball."</h5>
-      </article>
-
-      <article class="ans">
-        <!-- <img src=""> -->
-        <h5>The Maid: “I was dusting the corners of the house."</h5>
-      </article>
-
-      <article class="ans">
-        <!-- <img src=""> -->
-        <h5>Chef: “I was starting to make lunch for later.”</h5>
-      </article>
     </section>
 
     <div class="final">
-      <!-- display none after player answer -->
-      <section class="conclusion-container">
-        <!-- <h3>Who is lying?</h3> -->
 
+      <section class="conclusion-container">
+        <h3>Who is lying?</h3>
       </section>
 
       <section class="check">
@@ -68,11 +56,8 @@
     </div>
 
   </main>
+  <!----------------------------End Gameplay Body -------------------------->
 
-
-
-
-  <script src="canvas.js"></script>
   <script src="script.js"></script>
 </body>
 
