Update explain statement

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <section class="check">
         <h3 class="right-wrong">Correct!</h3>
-        <h4 class="explain">The maid was lying. There are no corners in a circular house.</h4>
+        <h4 class="explain"></h4>
       </section>
 
     </div>
