--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
   <!------------------------------- Overlay -------------------------->
   <div class="overlay">
     <header>
@@ -22,6 +23,22 @@
     <p>Click anywhere to play</p>
   </div>
   <!------------------------------- End overlay -------------------------->
+
+  <!------------------------------- Name/ Save score -------------------------->
+
+  <!-- <div class="overlay">
+    <header class="save-score">
+      <h1>Your name</h1>
+      <h6>Please click save if you like to save score</h6>
+      <input type="text" placeholder="My name">
+      <nav>
+        <h3>Restart</h3>
+        <h3>Save</h3>
+      </nav>
+    </header>
+
+
+  </div> -->
 
   <!------------------------------- Gameplay header-------------------------->
   <header>
