Finished setting local storage and local Score board

--- a/index.html
+++ b/index.html
@@ -24,21 +24,33 @@
   </div>
   <!------------------------------- End overlay -------------------------->
 
-  <!------------------------------- Name/ Save score -------------------------->
+  <!------------------------------- Score board-------------------------->
 
-  <!-- <div class="overlay">
+  <div class="overlay-score">
     <header class="save-score">
-      <h1>Your name</h1>
-      <h6>Please click save if you like to save score</h6>
-      <input type="text" placeholder="My name">
+      <div class="board">
+
+        <section class="name-container">
+          <h2> Your name</h2>
+        </section>
+
+        <section class="score-container">
+
+          <ul class="date-score-holder">
+            <li class="date-display">July 07 2019 1:20pm</li>
+            <li class="score-display">20</li>
+          </ul>
+
+        </section>
+      </div>
+
       <nav>
-        <h3>Restart</h3>
-        <h3>Save</h3>
+        <h3 class="restart">Restart</h3>
+        <input type="text" placeholder="My name">
+        <h3 class="save">Save</h3>
       </nav>
     </header>
-
-
-  </div> -->
+  </div>
 
   <!------------------------------- Gameplay header-------------------------->
   <header>
