--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Detective Riddles</title>
-
+  <!-- SEO -->
+  <meta name="description" content="A game that will improve your logical skill">
+  <meta name="keywords"
+    content="HTML5, CSS3, Web Design, Web Development, Responsive website, Creative website, Detective, Trivia, Quiz, Game">
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="favicon-16x16.ico">
+  <!-- Link -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
-
   <!------------------------------- Overlay -------------------------->
   <div class="overlay">
     <header>
