--- a/index.html
+++ b/index.html
@@ -39,14 +39,8 @@
           <h2> Your name</h2>
         </section>
 
-        <section class="score-container">
+        <section class="score-container"></section>
 
-          <ul class="date-score-holder">
-            <li class="date-display">July 07 2019 1:20pm</li>
-            <li class="score-display">20</li>
-          </ul>
-
-        </section>
       </div>
 
       <nav>
