--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="final">
 
       <section class="conclusion-container">
-        <h3>Who is lying?</h3>
+        <h3>Who is it?</h3>
       </section>
 
       <section class="check">
