--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <nav>
         <h3 class="restart">Restart</h3>
         <input type="text" placeholder="My name">
-        <h3 class="save">Save</h3>
+        <h3 class="clear">Clear</h3>
       </nav>
     </header>
   </div>
